# shirabe

./: .gitattributes  .gitignore  .goreleaser.yaml  .tsuku.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  friction-log-shirabe-0.7.0.md  friction-log-shirabe-0.9.0.md  go.mod  install.sh  koto-issue_10.state.jsonl  koto-issue_28.state.jsonl  koto-work-on.state.jsonl
crates/shirabe/: Cargo.toml  build.rs
crates/shirabe/src/: coordination.rs  main.rs  populate.rs  pr_body_hook.rs  work_summary.rs
crates/shirabe/tests/: absorption_parity.rs  cli.rs  coordination_body.rs  fc07_corpus.rs  lifecycle_advisory.rs  lifecycle_posture.rs  merge_gate.rs  parity.rs  populate_cli.rs  transition.rs  transition_parity.rs  work_summary.rs
crates/shirabe/tests/fixtures/: capture_go_baseline.sh
crates/shirabe/tests/fixtures/absorption-golden/: CAPTURE.md  cases.tsv  divergences.tsv  mapping.tsv
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-clean/: external_rules
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-fields-clean/: external_rules
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-fields-missing/: external_rules
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-invalid-status/: external_rules
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-missing-field/: external_rules
crates/shirabe/tests/fixtures/absorption-golden/expected/frontmatter-status-mismatch/: external_rules
crates/shirabe/tests/fixtures/transition-golden/: capture_script_baseline.sh  cases.tsv
(+1516 files in other folders)
