[package]
name = "shirabe"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "shirabe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
saphyr = "=0.0.6"
shirabe-validate = { path = "../shirabe-validate" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
