[package]
name = "shirabe"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "shirabe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
saphyr = "=0.0.6"
shirabe-validate = { path = "../shirabe-validate" }
serde_json = "1"
sha2 = "0.10"
regex = "1"
rustix = { version = "1", features = ["fs"] }
getrandom = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
